# developer-utility-kit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  audit-requirements.txt  pyproject.toml
.github/workflows/: ci.yml  ghcr.yml  release.yml  security.yml
src/toolkit/: __init__.py  cli.py
src/toolkit/core/: __init__.py  base_transformer.py  detector.py  hashing.py  io_utils.py  registry.py
src/toolkit/formatters/: __init__.py  json_tools.py  xml_tools.py
src/toolkit/history/: __init__.py  manager.py
src/toolkit/image_tools/: __init__.py  pixelate.py
src/toolkit/transformers/: __init__.py  encoding.py  optional_modules.py  structured.py  text_case.py
src/toolkit/web_tools/: __init__.py  sitemap.py
tests/: conftest.py  test_cli.py  test_detector.py  test_hashing.py  test_history.py  test_io_utils.py  test_json_tools.py  test_pixelate.py  test_registry_transformers.py  test_sitemap.py  test_transformers_extra.py  test_xml_tools.py
